--- a/db/package.json
+++ b/db/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deploy",
   "dependencies": {
-    "@sap/hdi-deploy": "^3.11.6"
+    "@sap/hdi-deploy": "^3.8.2"
   },
   "engines": {
     "node": "^8"
@@ -9,5 +9,15 @@
   "scripts": {
     "postinstall": "node .build.js",
     "start": "node node_modules/@sap/hdi-deploy/deploy.js"
+  },
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sqlite",
+        "model": [
+          "./schema.cds"
+        ]
+      }
+    }
   }
 }
